featured fixed gaps

--- a/styles/breads-types.css
+++ b/styles/breads-types.css
@@ -21,13 +21,13 @@
 .featured__types{
     display: grid;
     grid-template-columns: 1fr;
+    gap: 30px;
 }
 
 .featured__type {
     display:flex;
     flex-direction: column;
     gap: 10px;
-    padding: 0 15px;
 }
 
 .type__image{
@@ -51,6 +51,7 @@
     color: var(--text-description-accent); 
    font-size: 17px;
    line-height: 1.5;
+   text-align: justify;
 }
 
 @media (min-width: 768px){
